--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
 
 jobs:
+  # Builds the package and uploads a build artifiact
   build:
     runs-on: ubuntu-latest
     steps:
@@ -23,15 +24,39 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.3
       with:
+        name: distribution-archives
         path: dist/*
+  # Creates a release if the commit has a tag associated with it
+  release:
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Download build
+      uses: actions/download-artifact@v4.1.7
+      with:
+        name: distribution-archives
+        path: dist
     - name: Create release
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: dist/*
+  # Publish to PyPI if the commit has a tag associated with it
+  publish:
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Download build
+      uses: actions/download-artifact@v4.1.7
+      with:
+        name: distribution-archives
+        path: dist
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      if: startsWith(github.ref, 'refs/tags/')
+      uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
