--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5.1.0
       with:
         python-version: '3.12'
     - name: Install dependencies
@@ -22,7 +22,7 @@ jobs:
     - name: Build package
       run: python -m build
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.3
+      uses: actions/upload-artifact@v4.3.3
       with:
         name: distribution-archives
         path: dist/*
@@ -36,6 +36,7 @@ jobs:
     - name: Download build
       uses: actions/download-artifact@v4.1.7
       with:
+        name: distribution-archives
         path: dist
     - name: Create release
       uses: softprops/action-gh-release@v2
@@ -52,6 +53,7 @@ jobs:
     - name: Download build
       uses: actions/download-artifact@v4.1.7
       with:
+        name: distribution-archives
         path: dist
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450
