--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,7 @@ indent_style = tab
 indent_size = 4
 end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+trim_trailing_whitespace = false
 insert_final_newline = false
+# Use line wrapping instead of formatting
+max_line_length = 1000
